[gd_scene load_steps=3 format=2]

[ext_resource path="res://Themes/Store.tres" type="Theme" id=1]
[ext_resource path="res://Entities/Interface/Store/Store.gd" type="Script" id=2]

[node name="Store" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PanelContainer" type="PanelContainer" parent="ScrollContainer"]
margin_right = 800.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SkillsCols" type="HBoxContainer" parent="ScrollContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 793.0
margin_bottom = 593.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Row0" type="VBoxContainer" parent="ScrollContainer/PanelContainer/SkillsCols"]
margin_right = 391.0
margin_bottom = 586.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Row1" type="VBoxContainer" parent="ScrollContainer/PanelContainer/SkillsCols"]
margin_left = 395.0
margin_right = 786.0
margin_bottom = 586.0
size_flags_horizontal = 3
size_flags_vertical = 3

